--- a/src/components/Sign In/SignIn.scss
+++ b/src/components/Sign In/SignIn.scss
@@ -17,18 +17,13 @@
 			justify-content: space-between;
 			display: flex;
 			margin: 10px 0;
-			a {
+			div {
 				color: blue;
 				cursor: pointer;
 				&:hover {
 					text-decoration: underline;
 				}
 			}
-		}
-		.footer {
-			color: rgba(0, 0, 0, 0.54);
-			margin-top: 50px;
-			text-align: center;
 		}
 	}
 }
