--- a/src/components/Sign Up/SignUp.scss
+++ b/src/components/Sign Up/SignUp.scss
@@ -21,18 +21,13 @@
 		}
 		.link_wrapper {
 			text-align: right;
-			a {
+			div {
 				cursor: pointer;
 				color: blue;
 				&:hover {
 					text-decoration: underline;
 				}
 			}
-		}
-		.footer {
-			color: rgba(0, 0, 0, 0.54);
-			margin-top: 15px;
-			text-align: center;
 		}
 	}
 }
